// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a Button with merged attributes 1`] = `
<button
  aria-disabled={false}
  className="button default TestClass"
  data-mock="data"
  disabled={false}
  style={
    Object {
      "height": "100px",
    }
  }
  type="button"
/>
`;

exports[`should render a button with type equal to button 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  type="button"
/>
`;

exports[`should render a button with type equal to reset 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  type="reset"
/>
`;

exports[`should render a button with type equal to submit 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  type="submit"
/>
`;

exports[`should render a default button 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  type="button"
/>
`;

exports[`should render a link button 1`] = `
<button
  aria-disabled={false}
  className="button link"
  disabled={false}
  type="button"
/>
`;

exports[`should render a primary button 1`] = `
<button
  aria-disabled={false}
  className="button primary"
  disabled={false}
  type="button"
/>
`;

exports[`should render a secondary button 1`] = `
<button
  aria-disabled={false}
  className="button secondary"
  disabled={false}
  type="button"
/>
`;

exports[`should render an icon 1`] = `
<button
  aria-disabled={false}
  className="button default tiny"
  disabled={false}
  type="button"
>
  <img
    alt="icon"
  />
</button>
`;

exports[`should render an icon and a text 1`] = `
<button
  aria-disabled={false}
  className="button default tiny"
  disabled={false}
  type="button"
>
  <img
    alt="icon"
  />
  <span
    className="text-with-icon"
  >
    text
  </span>
</button>
`;

exports[`should render as an anchor when provided an href 1`] = `
<a
  aria-disabled={false}
  className="button default"
  disabled={false}
  href="MockHref"
  type="button"
>
  <span
    className={null}
  >
    href
  </span>
</a>
`;

exports[`should render as disabled when set 1`] = `
<button
  aria-disabled={true}
  className="button default is-disabled"
  disabled={true}
  tabIndex="-1"
  type="button"
>
  <span
    className={null}
  >
    Disabled
  </span>
</button>
`;

exports[`should render text then an icon when reversed 1`] = `
<button
  aria-disabled={false}
  className="button default tiny"
  disabled={false}
  type="button"
>
  <span
    className="text-with-icon-reverse"
  >
    text
  </span>
  <img
    alt="icon"
  />
</button>
`;
